<resources>
    <string name="app_name">Study Buddy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fhictemail_hint">Enter your FHICT email adress.</string>
    <string name="fhictpassword_hint">Enter your password.</string>
<<<<<<< HEAD
    <string name="button_label_login">Log in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="default_image_placeholder_text">Attempting to load image...</string>
    <string name="card_default_text">Owowofdasdjkfhsdajfsdjaf afdsafsadfsad asfsdafasfsd</string>
    <string name="button_label_closecard">Close</string>
    <string name="cardViewText">Insert text here. dsahfksdjfksda skjdhfsdaj fsdajkfh sadkjf sdjfsadkjf sadfsadhfsdaf sadfhsdakjf sadfhsDJF SADHFASDF ASJHFSADIGJASIOGJASKDF DKFHSADKF SDKF SADJFH SADFDA SDAKJFHSAKJ FSADKJFHSDF SA.</string>
    <string name="defaultContentDescription">Missing image, ree</string>
    <string name="defaultCloseButton">Close</string>
    <string name="defaultOpenButton">Open</string>

    <string-array name="card_title">
        <item>"Announcement"</item>
        <item>"Deadline"</item>
        <item>"Appointment"</item>
        <item>"Placeholder"</item>
        <item>"Placeholder"</item>
        <item>"Placeholder"</item>
        <item>"Placeholder"</item>
        <item>"Placeholder"</item>
    </string-array>

    <string-array name="card_desc">
        <item name="announcement_message">Gebouw R1 heeft onderhoudt, en daarom kan de achteringang niet worden gebruikt.</item>
        <item name="announcement_message">2MANDATORY EVACUATION FOR ALL RESIDENTS LIVING BELOW LAKE TAHOMA  CONTINUES. THIS WAS ISSUED AT THE RECOMMENDATION OF DAM ENGINEERS  WHO REMAIN ON THE SCENE. THE CLASS 1 EMERGENCY AT LAKE TAHOMA  WILL CONTINUE UNTIL DAM INSPECTORS EVALUATE THE DAM DURING  DAYLIGHT HOURS. THIS IS FOR YOUR SAFETY.</item>
        <item name="announcement_message">3MANDATORY EVACUATION FOR ALL RESIDENTS LIVING BELOW LAKE TAHOMA  CONTINUES. THIS WAS ISSUED AT THE RECOMMENDATION OF DAM ENGINEERS  WHO REMAIN ON THE SCENE. THE CLASS 1 EMERGENCY AT LAKE TAHOMA  WILL CONTINUE UNTIL DAM INSPECTORS EVALUATE THE DAM DURING  DAYLIGHT HOURS. THIS IS FOR YOUR SAFETY.</item>

    </string-array>

=======
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_sidedrawer">Sidedrawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="qr_description">Gebruik QR-code</string>
    <string name="qrplaceholder_description">Placeholder for QR</string>
    <string name="qrcode_example">QR code voorbeeld</string>
    <string name ="tabtitle">Friends</string>
>>>>>>> activity-qr
</resources>
