<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/mtrl_card_spacing"
    android:layout_marginTop="@dimen/mtrl_card_spacing"
    android:layout_marginRight="@dimen/mtrl_card_spacing"
    android:minHeight="175dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:strokeColor="@color/colorPrimary"
    app:strokeWidth="5dp"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@color/colorPrimary">

    <TextView
        android:id="@+id/textView"
        android:layout_width="224dp"
        android:layout_height="131dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/card_default_text" />

    <ImageView
        android:layout_gravity="end"
        android:id="@+id/imageView"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/default_image_placeholder_text"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_unelevated_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/button_label_closecard" />


</com.google.android.material.card.MaterialCardView>